--- a/wiki/Intro.wiki
+++ b/wiki/Intro.wiki
@@ -8,7 +8,4 @@ Included is source for a SELinux module to limit it's operations.
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+The SELinux-module is important. You should not use this software unless you have knowledge about how to compile and use SELinux-modules and set up file contexts.
